##############################################################################
# Btune for Blosc2 - Automatically choose the best codec/filter for your data
#
# Copyright (c) 2023 The Blosc Developers <blosc@blosc.org>
# https://btune.blosc.org
# License: GNU Affero General Public License v3.0
# See LICENSE.txt for details about copyright and rights to use.
##############################################################################

[build-system]
requires = ["scikit-build-core", "blosc2"]
build-backend = "scikit_build_core.build"

[project]
name = "blosc2_grok"
version = "0.0.2.dev"
readme = "README.md"
authors = [
    {name = "Blosc Development Team", email = "contact@blosc.org"},
]
description = "Grok plugin for Blosc2. jpeg2000 for grayscale."
keywords = ["plugin", "blosc2"]
license = {text = "GNU Affero General Public License version 3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    # python-blosc2 is not a strict runtime dependency, but it is handy
    "blosc2"
]

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.cibuildwheel]
skip = "*-manylinux_i686 *_ppc64le *_s390x *-musllinux*"

[tool.scikit-build]
# Python ABI compatibility should not be a problem for Blosc plugins
wheel.py-api = "py3"
