##############################################################################
# blosc2_grok: Grok (JPEG2000 codec) plugin for Blosc2
#
# Copyright (c) 2023  The Blosc Development Team <blosc@blosc.org>
# https://blosc.org
# License: GNU Affero General Public License v3.0 (see LICENSE.txt)
##############################################################################

[build-system]
requires = ["scikit-build-core", "blosc2"]
build-backend = "scikit_build_core.build"

[project]
name = "blosc2_grok"
version = "0.0.2.dev"
readme = "README.md"
authors = [
    {name = "Blosc Development Team", email = "contact@blosc.org"},
]
description = "Grok (JPEG2000 codec) plugin for Blosc2."
keywords = ["plugin", "blosc2"]
license = {text = "GNU Affero General Public License version 3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Image Processing",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: System :: Archiving :: Compression",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    # python-blosc2 is not a strict runtime dependency, but it is handy
    "blosc2"
]

[project.optional-dependencies]
h5py-test = [
    "pytest",  # to run tests
]

[project.urls]
Homepage = "https://github.com/Blosc/blosc2_grok"
Issues = "https://github.com/Blosc/blosc2_grok/issues"

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.cibuildwheel]
skip = "*-manylinux_i686 *_ppc64le *_s390x *-musllinux*"

[tool.scikit-build]
# Python ABI compatibility should not be a problem for Blosc plugins
wheel.py-api = "py3"
