##############################################################################
# blosc2_grok: Grok (JPEG2000 codec) plugin for Blosc2
#
# Copyright (c) 2023  The Blosc Development Team <blosc@blosc.org>
# https://blosc.org
# License: GNU Affero General Public License v3.0 (see LICENSE.txt)
##############################################################################

[build-system]
requires = ["scikit-build-core", "blosc2>=4.0.0b1"]
build-backend = "scikit_build_core.build"

[project]
name = "blosc2_grok"
version = "0.3.4.dev0"
readme = "README.md"
authors = [
    {name = "Blosc Development Team", email = "contact@blosc.org"},
]
description = "Grok (JPEG2000 codec) plugin for Blosc2."
keywords = ["plugin", "blosc2"]
license = {text = "GNU Affero General Public License version 3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    # python-blosc2 brings the required blosc2 libraries
    "blosc2"
]

[project.optional-dependencies]
h5py-test = [
    "pytest",  # to run tests
]

[project.urls]
Homepage = "https://github.com/Blosc/blosc2_grok"
Issues = "https://github.com/Blosc/blosc2_grok/issues"

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.cibuildwheel]
# Avoid duplicate wheel filenames when cp313 and cp313t both build with py3 ABI tags.
skip = "*-manylinux_i686 *_ppc64le *_s390x *-musllinux* cp313t-*"
# Build using the manylinux image to ensure manylinux_2_28 wheels are produced
# grok needs at least GCC 11, and manylinux_2_28 is the first manylinux image
# to include GCC 11 (actually, GCC 12)
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
repair-wheel-command = ""

[tool.scikit-build]
# Python ABI compatibility should not be a problem for Blosc plugins
wheel.py-api = "py3"
# Exclude grok static library and headers from wheel (already linked into libblosc2_grok.so)
wheel.exclude = ["_unused_grok_lib", "_unused_grok_include"]
